fix: home page redesign

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'GiazaStencil';
+    src: url('/assets/fonts/giazaStencil.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.font-giaza {
+    font-family: 'GiazaStencil', sans-serif;
+}
